...
                        android:orientation="vertical"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter">

                    <EditText
                            android:id="@+id/et_comment"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:hint="@string/hint_comment"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:maxLength="50"/>
...
