<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="Payment"
                type="com.chikeandroid.debtmanager.data.Payment"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

        <androidx.cardview.widget.CardView
                android:id="@+id/card_dialog_fullscreen"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:minHeight="72dp"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/iv_close_add_payment_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:padding="4dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_close_black"
                        android:tint="@color/gray_deep"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:id="@+id/tv_add_edit_payment_dialog_title"
                                style="@style/Base.DialogWindowTitle.AppCompat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:padding="4dp"
                                android:text="@string/title_add_payment"
                                android:textColor="@color/gray_deep"/>

                        <ImageButton
                                android:id="@+id/ib_delete_payment"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="12dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:padding="4dp"
                                android:src="@drawable/ic_delete_dark_greey"
                                android:tint="@color/gray_deep"
                                android:layout_toStartOf="@+id/ib_save_payment"/>

                        <ImageButton
                                android:id="@+id/ib_save_payment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="12dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:padding="4dp"
                                android:src="@drawable/ic_check_circle_grey"
                                android:tint="@color/gray_deep"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_amount"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                <EditText
                        android:id="@+id/et_payment_amount"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:hint="@string/hint_amount"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_comment"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:counterEnabled="true"
                    app:counterMaxLength="50"
                    app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter">

                <EditText
                        android:id="@+id/et_payment_comment"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_comment"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                    android:id="@+id/btn_payment_date_created"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    tools:text="Created on: Friday, March 29th 2017"/>

            <RadioGroup
                    android:id="@+id/rg_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large">

                <RadioButton
                        android:id="@+id/rb_decrease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_decrease_debt_amount"
                        android:checked="true"/>

                <RadioButton
                        android:id="@+id/rb_increase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_increase_debt_amount"/>

                <RadioButton
                        android:id="@+id/rb_leave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_leave_debt_amount_as_it_is"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</layout>