...
                    layout="@layout/debt_detail_content"
                    bind:PersonDebt="@{PersonDebt}"/>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add"
                app:layout_anchor="@id/app_bar_layout"
                app:layout_anchorGravity="bottom|end" />
...
